--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,6 @@ xcuserdata
 # End of https://www.toptal.com/developers/gitignore/api/swiftpackagemanager,swift,xcode,macos
 .idea/**
 project.pbxproj
+play/**
+*.playground
+xcschememanagement.plist
